--- a/tmux.conf
+++ b/tmux.conf
@@ -1,24 +1,26 @@
 # improve colors
 set -g default-terminal 'screen-256color'
+# copy and paster
+# set-option -g default-command "reattach-to-user-namespace -l zsh
 
 # act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# setw -g mode-keys vi
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+# bind-key -r C-h select-window -t :-
+# bind-key -r C-l select-window -t :+
 
 # act like GNU screen
 unbind C-b
 set -g prefix C-a
 
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
-set -g renumber-windows on
+# set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
@@ -34,6 +36,4 @@ set -g history-limit 10000
 # switch to last pane
 bind-key C-a last-pane
 
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 set -sg escape-time 0
