change copy mode binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,13 @@
+# Bind escape to copy mode
+unbind [
+bind Escape copy-mode
+# p = paste
+unbind p
+bind p paste-buffer
+
+# no escape delay
+set -sg escape-time 0
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
@@ -60,15 +70,6 @@ bind C-l send-keys 'C-l'
 
 # Easy rotating of panes
 bind C-k swap-pane -U
-
-# Quick access to todo file
-bind t split-window -h -c ~/wiki "reattach-to-user-namespace vim todo.md"
-
-# Quick access to wiki
-bind W if-shell 'tmux select-window -t 0' '' 'new-window -c ~/wiki -n wiki -t 0 "reattach-to-user-namespace vim +CtrlP"'
-bind w split-window -h -c ~/wiki "reattach-to-user-namespace vim +CtrlP"
-
-bind C-t split-window -h -c ~/ "source ~/.zshrc && t"
 
 # Show pane numbers for half a second
 set -g display-panes-time 300
