Open splits in the same directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -87,8 +87,9 @@ bind b break-pane -d
 bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
 # more intuitive keybindings for splitting
-bind \ split-window -h
-bind - split-window -v
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
 
 # Easy return to Vim from tmux runner zoom runner pane
 bind C-p run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys ':VtrZoomRunnerPane' 'C-m') || tmux send-keys 'C-c' && tmux select-pane -l"
