Remove easy motion
Fix persistent undo
Color tweaks

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # Bind escape to copy mode
 unbind [
 bind Escape copy-mode
+
 # p = paste
 unbind p
 bind p paste-buffer
@@ -37,9 +38,6 @@ set -g mouse-select-pane on
 set -g mouse-select-window on
 setw -g mode-mouse on
 
-# I always miss this binding
-bind C-[ copy-mode
-
 bind m split-window -h 'reattach-to-user-namespace mutt'
 
 # Use vim keybindings in copy mode
@@ -71,15 +69,14 @@ bind C-l send-keys 'C-l'
 # Easy rotating of panes
 bind C-k swap-pane -U
 
-# Show pane numbers for half a second
-set -g display-panes-time 300
+set -g display-panes-time 600
 
 # status bar stuff
 set -g status-left-length 40
 
-# Simplify status bar display. Uses Goles/Battery script
+# Simplify status bar display.
 set -g status-left '[#S]'
-set -g status-right "#(battery -t)   -  %I:%M %p "
+set -g status-right "%I:%M %p "
 # set -g status-right "#[fg=red][44%%]#[default]   -  %I:%M %p "
 
 # Dismiss current pane to background window
