show pane numbers longer

--- a/tmux.conf
+++ b/tmux.conf
@@ -69,7 +69,8 @@ bind C-l send-keys 'C-l'
 # Easy rotating of panes
 bind C-k swap-pane -U
 
-set -g display-panes-time 600
+# increase display time
+set -g display-panes-time 1200
 
 # status bar stuff
 set -g status-left-length 40
