Changes I forgot to commit
Trying neovim/switching back because it broke alot of plugins.

Bumping to newer test runner.

--- a/tmux.conf
+++ b/tmux.conf
@@ -114,6 +114,12 @@ set -g default-terminal "screen-256color"
 set-option -g default-command "reattach-to-user-namespace -l zsh -l"
 set-window-option -g automatic-rename on
 
+# Enable VI mode
+set-window-option -g mode-keys vi
+
+# Set ability to capture on start and restore on exit window data when running an application
+setw -g alternate-screen on
+
 # bind resizing of panes to H,J,K,L (resizes by steps of 10 lines/columns)
 # # Note, bindings are repeatable (within the default 500ms time limit) so that
 # # you don't have to keep entering the prefix. (Prefix-H-H-H resizes by 15)
