--- a/tmux.conf
+++ b/tmux.conf
@@ -37,19 +37,11 @@ set -g mouse on
 
 bind m split-window -h 'reattach-to-user-namespace mutt'
 
-# Use vim keybindings in copy mode
+# Act like vim in copy mode
+set -g status-keys vi
 setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-unbind -t vi-copy Space
-bind -t vi-copy Space jump-again
-
-bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
